--- a/MyNews/app/src/main/res/values/strings.xml
+++ b/MyNews/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="shopping_lprice">"최저가 %s원"</string>
+    <string name="shopping_hprice">"최고가 %s원"</string>
 </resources>
